--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -19,6 +19,10 @@ year = {2022}
 }
 
 @article{Vetter2022a,
+abstract = {Patients with diabetes mellitus are at risk for micro- and macrovascular complications that are responsible for a substantial part of the individual health burden and socio-economic costs. Therefore, implementable risk scores are needed to improve targeted prevention for patients that are particularly susceptible to complications. The “epigenetic clock” estimates an individual’s biological age using DNA methylation profiles and was previously shown to be associated with morbidity and mortality.
+In this study, we examine older adults of the BASE-II study that were reexamined on average 7.4 years after baseline assessment as part of the GendAge study. For DNA methylation age (DNAmA) estimation we used the 7-CpG clock which was available for two timepoints (n=1,071 at follow-up). In addition, we determined epigenetic age using Horvath’s clock, Hannum’s clock, PhenoAge and GrimAge which were available at follow-up only (n=1,067). The deviation of DNAmA from chronological age, DNA methylation age acceleration (DNAmAA), was calculated as residuals of a leukocyte cell count adjusted linear regression analysis. Diabetes associated complications were assessed with the Diabetes Complications Severity Index (DCSI).
+Cross-sectionally, a statistically significant association between oral glucose tolerance test results and Hannum (ß=0.8, SE=0.3, p=0.02, n=762) and PhenoAge DNAmAA (ß=0.8, SE=0.3, p=0.003, n=762) was found. PhenoAge was also associated with fasting glucose (ß=0.3, SE=0.1, p=0.013, n=966). In contrast, we observed no cross-sectional association after covariate adjustment between DNAmAA and a diagnosis of diabetes mellitus with any of the five clocks employed. This was true for longitudinal analyses with the 7-CpG clock as well. However, longitudinal analyses showed that every year in the 7-CpG-based DNAmAA estimate at baseline increased the risk for developing of one or more additional complications or worsening of an already existing complication during the follow-up period by 11% in male participants with diabetes mellitus type 2. This association persisted after adjustment for DCSI at baseline, chronological age, smoking, alcohol, diabetes medication, and BMI (OR =1.11, p=0.045, n=56). No statistically significant association was found in the subgroup of women or when the whole dataset was analyzed (p>0.05).
+Although our findings still need to be independently validated, the 7-CpG clock appears to be a promising biomarker which is informative about the individual risk for diabetic complications independent of age, sex, lifestyle factors, or complications at baseline.},
 abbr={medRxiv},
 author = {Vetter, Valentin Max and Spieker, Johanne and Sommerer, Yasmine and Buchmann, Nikolaus and Kalies, Christian Humberto and Regitz-Zagrosek, Vera and Bertram, Lars and Demuth, Ilja},
 doi = {10.1101/2022.06.28.22276991},
@@ -107,6 +111,26 @@ year = {2022},
 selected={true}
 }
 
+@article{Sommerer2022a,
+abbr={Clin. Epigenetics},
+abstract = {Epigenome-wide association studies (EWAS) assessing the link between DNA methylation (DNAm) and phenotypes related to structural brain measures, cognitive function, and neurodegenerative diseases are becoming increasingly more popular. Due to the inaccessibility of brain tissue in humans, several studies use peripheral tissues such as blood, buccal swabs, and saliva as surrogates. To aid the functional interpretation of EWAS findings in such settings, there is a need to assess the correlation of DNAm variability across tissues in the same individuals. In this study, we performed a correlation analysis between DNAm data of a total of n = 120 matched post-mortem buccal and prefrontal cortex samples. We identified nearly 25,000 (3% of approximately 730,000) cytosine-phosphate-guanine (CpG) sites showing significant (false discovery rate q < 0.05) correlations between buccal and PFC samples. Correlated CpG sites showed a preponderance to being located in promoter regions and showed a significant enrichment of being determined by genetic factors, i.e. methylation quantitative trait loci (mQTL), based on buccal and dorsolateral prefrontal cortex mQTL databases. Our novel buccal–brain DNAm correlation map will provide a valuable resource for future EWAS using buccal samples for studying DNAm effects on phenotypes relating to the brain. All correlation results are made freely available to the public online.},
+author = {Sommerer, Yasmine and Ohlei, Olena and Dobricic, Valerija and Oakley, Derek H. and Wesse, Tanja and {Sedghpour Sabet}, Sanaz and Demuth, Ilja and Franke, Andre and Hyman, Bradley T. and Lill, Christina M. and Bertram, Lars},
+doi = {10.1186/S13148-022-01357-W/FIGURES/4},
+issn = {18687083},
+journal = {Clinical Epigenetics},
+keywords = {Brain,Buccal,DNAm,Inter-tissue correlation},
+month = {nov},
+number = {1},
+pages = {1--10},
+pmid = {36320053},
+publisher = {BioMed Central Ltd},
+title = {{A correlation map of genome-wide DNA methylation patterns between paired human brain and buccal samples}},
+url = {https://link.springer.com/articles/10.1186/s13148-022-01357-w https://link.springer.com/article/10.1186/s13148-022-01357-w},
+volume = {14},
+year = {2022},
+selected={true}
+}
+
 @article{Vetter2022,
 abbr={Innov. Aging},
 abstract = {Particularly older people are at risk for deficient vitamin D levels, as their capability for cutaneous synthetization is lower and they are often less exposed to sunlight. However, the resulting impact on one individual's health is not fully understood. To examine potential consequences of low vitamin D levels for health of older people, we examined its relationship with a DNA related biomarker of aging, DNA methylation age acceleration (DNAmAA). Several epigenetic clocks, that are used to estimate this parameter from methylation fractions of specific cytosine-phosphate-guanine sites, are available and differ in aspects of aging they represent best. Five clocks, 7-CpG clock, Horvath's clock, Hannum's clock, PhenoAge, and GrimAge, were available in the longitudinal BASE-II cohort (n=1,100) at follow-up examination. DNAmAA estimated from 7-CpG clock and GrimAge was associated with vitamin D levels in covariate adjusted regression analysis. Additionally, a quasi-interventional study design was employed and showed 2.6 year lower 7-CpG DNAmAA (p=0.011) and 1.3-year lower Horvath DNAmAA (p=0.042) in vitamin D deficient participants that chose to start vitamin D supplementation during the follow-up period of 7.4 ± 1.5 years compared to a matched control-group of participants with untreated vitamin D deficiency. No statistically significant difference was found between sufficiently treated participants with vitamin D deficiency and a matched group of participants that reached sufficient vitamin D level without supplementation. Although validation of our results in a randomized controlled trial is needed, our findings suggest, that vitamin D deficiency associated higher rates of epigenetic aging can potentially be reversed through supplementation.},
@@ -139,39 +163,6 @@ volume = {6},
 year = {2022}
 }
 
-@article{Sommerer2022a,
-abbr={Clin. Epigenetics},
-abstract = {Epigenome-wide association studies (EWAS) assessing the link between DNA methylation (DNAm) and phenotypes related to structural brain measures, cognitive function, and neurodegenerative diseases are becoming increasingly more popular. Due to the inaccessibility of brain tissue in humans, several studies use peripheral tissues such as blood, buccal swabs, and saliva as surrogates. To aid the functional interpretation of EWAS findings in such settings, there is a need to assess the correlation of DNAm variability across tissues in the same individuals. In this study, we performed a correlation analysis between DNAm data of a total of n = 120 matched post-mortem buccal and prefrontal cortex samples. We identified nearly 25,000 (3% of approximately 730,000) cytosine-phosphate-guanine (CpG) sites showing significant (false discovery rate q < 0.05) correlations between buccal and PFC samples. Correlated CpG sites showed a preponderance to being located in promoter regions and showed a significant enrichment of being determined by genetic factors, i.e. methylation quantitative trait loci (mQTL), based on buccal and dorsolateral prefrontal cortex mQTL databases. Our novel buccal–brain DNAm correlation map will provide a valuable resource for future EWAS using buccal samples for studying DNAm effects on phenotypes relating to the brain. All correlation results are made freely available to the public online.},
-author = {Sommerer, Yasmine and Ohlei, Olena and Dobricic, Valerija and Oakley, Derek H. and Wesse, Tanja and {Sedghpour Sabet}, Sanaz and Demuth, Ilja and Franke, Andre and Hyman, Bradley T. and Lill, Christina M. and Bertram, Lars},
-doi = {10.1186/S13148-022-01357-W/FIGURES/4},
-issn = {18687083},
-journal = {Clinical Epigenetics},
-keywords = {Brain,Buccal,DNAm,Inter-tissue correlation},
-month = {dec},
-number = {1},
-pages = {1--10},
-pmid = {36320053},
-publisher = {BioMed Central Ltd},
-title = {{A correlation map of genome-wide DNA methylation patterns between paired human brain and buccal samples}},
-url = {https://link.springer.com/articles/10.1186/s13148-022-01357-w https://link.springer.com/article/10.1186/s13148-022-01357-w},
-volume = {14},
-year = {2022},
-selected={true}
-}
-
-@article{ohlei2023,
-  abbr={medRxiv},
-  bibtex_show={true},
-  title={Genome-wide QTL mapping across three tissues highlights several Alzheimer’s and Parkinson’s disease loci potentially acting via DNA methylation},
-  author={Ohlei, Olena and Sommerer, Yasmine and Dobricic, Valerija and Homann, Jan and Deecke, Laura and Schilling, Marcel and Bartrés-Faz, David and Cattaneo, Gabriele and Düzel, Sandra and Fjell, Anders M. and Lindenberger, Ulman and Pascual-Leone, Álvaro and Sabet, Sanaz Sedghpour and Solé-Padullés, Cristina and Tormos, Joseph M. and Vetter, Valentin M. and Walhovd, Kristine B. and Wesse, Tanja and Wittig, Michael and Franke, Andre and Demuth, Ilja and Lill, Christina M. and Bertram, Lars},
-  journal={medRxiv},
-  volume={},
-  number={},
-  pages={},
-  year={2023},
-  publisher={}
-}
-
 @article{Vetter2023,
 abbr={Commun. Med},
 abstract = {Patients with Type 2 diabetes mellitus (T2D) are at risk for micro- and macrovascular complications. Implementable risk scores are needed to improve targeted prevention for patients that are particularly susceptible to complications. The epigenetic clock estimates an individual's biological age using DNA methylation profiles. In this study, we examined older adults of the Berlin Aging Study II that were reexamined on average 7.4 years after baseline assessment as part of the GendAge study. DNA methylation age (DNAmA) and its deviation from chronological age DNAmA acceleration (DNAmAA) were calculated with the 7-CpG clock (available at both timepoints, n = 1,071), Horvath's clock, Hannum's clock, PhenoAge and GrimAge (available at follow-up only, n = 1,067). T2D associated complications were assessed with the Diabetes Complications Severity Index (DCSI). We report on a statistically significant association between oral glucose tolerance test results and Hannum and PhenoAge DNAmAA. PhenoAge was also associated with fasting glucose. In contrast, we found no cross-sectional association after covariate adjustment between DNAmAA and a diagnosis of T2D. However, longitudinal analyses showed that every additional year of 7-CpG DNAmAA at baseline increased the odds for developing one or more additional complications or worsening of an already existing complication during the follow-up period by 11% in male participants with T2D. This association persisted after covariate adjustment (OR = 1.11, p = 0.045, n = 56). Although our results remain to be independently validated, this study shows promising evidence of utility of the 7-CpG clock in identifying patients with diabetes who are at high risk for developing complications. Deterioration of vision, kidney function and cardiovascular function are just a few examples of diabetes-related complications. However, not all patients develop these complications, and it is desirable to detect patients that have a high risk for the complications early. In this study, we examine markers, which are based on reversible modifications of the DNA, in the context of diabetes and its complications. We found that one of these biomarkers is able to predict the development of diabetes complications over a period of about seven years in our dataset. If these results can be confirmed in other studies, our findings might help physicians to identify patients with diabetes that have an increased risk for developing complications in the future. Vetter et al. evaluate cross-sectional and longitudinal associations between DNA methylation age acceleration and type 2 diabetes and its complications in older adults. Although epigenetic aging does not associate with a diagnosis of diabetes, 7-CpG-based estimates are associated with increased risk of developing complications.},
@@ -198,7 +189,7 @@ doi = {10.1093/CERCOR/BHAC400},
 issn = {1047-3211},
 journal = {Cerebral Cortex},
 keywords = {aging,caudate,cortex,hippocampus,individual differences},
-month = {apr},
+month = {may},
 number = {9},
 pages = {5075--5081},
 pmid = {36197324},
@@ -209,8 +200,32 @@ volume = {33},
 year = {2023}
 }
 
+@article{Sommerer2023,
+abbr={Alzheimer's res. ther.},
+abstract = {Background: Studies on DNA methylation (DNAm) in Alzheimer's disease (AD) have recently highlighted several genomic loci showing association with disease onset and progression. Methods: Here, we conducted an epigenome-wide association study (EWAS) using DNAm profiles in entorhinal cortex (EC) from 149 AD patients and control brains and combined these with two previously published EC datasets by meta-analysis (total n = 337). Results: We identified 12 cytosine-phosphate-guanine (CpG) sites showing epigenome-wide significant association with either case–control status or Braak's tau-staging. Four of these CpGs, located in proximity to CNFN/LIPE, TENT5A, PALD1/PRF1, and DIRAS1, represent novel findings. Integrating DNAm levels with RNA sequencing-based mRNA expression data generated in the same individuals showed significant DNAm-mRNA correlations for 6 of the 12 significant CpGs. Lastly, by calculating rates of epigenetic age acceleration using two recently proposed “epigenetic clock” estimators we found a significant association with accelerated epigenetic aging in the brains of AD patients vs. controls. Conclusion: In summary, our study represents the hitherto most comprehensive EWAS in AD using EC and highlights several novel differentially methylated loci with potential effects on gene expression.},
+author = {Sommerer, Yasmine and Dobricic, Valerija and Schilling, Marcel and Ohlei, Olena and Sabet, Sanaz Sedghpour and Wesse, Tanja and Fu{\ss}, Janina and Franzenburg, S{\"{o}}ren and Franke, Andre and Parkkinen, Laura and Lill, Christina M. and Bertram, Lars},
+doi = {10.1186/S13195-023-01232-7/TABLES/6},
+issn = {17589193},
+journal = {Alzheimer's Research and Therapy},
+keywords = {Alzheimer's disease,Brain,DNA methylation,EWAS,Entorhinal cortex,Epigenome-wide association study,Meta-analysis},
+month = {may},
+number = {1},
+pages = {1--13},
+pmid = {37149695},
+publisher = {BioMed Central Ltd},
+title = {{Entorhinal cortex epigenome-wide association study highlights four novel loci showing differential methylation in Alzheimer's disease}},
+url = {https://link.springer.com/articles/10.1186/s13195-023-01232-7 https://link.springer.com/article/10.1186/s13195-023-01232-7},
+volume = {15},
+year = {2023},
+selected={true}
+}
+
 @article{Koetsier2023,
 abbr={medRxiv},
+abstract = {Given the established association between DNA methylation and the pathophysiology of dementia and its plausible role as a molecular mediator of lifestyle and environment, blood-derived DNA methylation data could enable early detection of dementia risk.
+In conjunction with an extensive array of machine learning techniques, we employed whole blood genome-wide DNA methylation data as a surrogate for 14 modifiable and non-modifiable factors in the assessment of dementia risk in two independent cohorts of Alzheimer’s disease (AD) and Parkinson’s disease (PD).
+We established a multivariate methylation risk score (MMRS) to identify the status of mild cognitive impairment (MCI) cross-sectionally, independent of age and sex. We further demonstrated significant predictive capability of this score for the prospective onset of cognitive decline in AD and PD.
+Our work shows the potential of employing blood-derived DNA methylation data in the assessment of dementia risk.},
 author = {Koetsier, Jarno and Cavill, Rachel and Reijnders, Rick and Harvey, Joshua and Deckers, Kay and K{\"{o}}hler, Sebastian and Eijssen, Lars and Smith, Rebecca G. and Smith, Adam R. and Burrage, Joe and Walker, Emma M. and Shireby, Gemma and Hannon, Eilis and Dempster, Emma and Frayling, Tim and Mill, Jonathan and Dobricic, Valerija and Sommerer, Yasmine and Johannsen, Peter and Wittig, Michael and Franke, Andre and Vandenberghe, Rik and Schaeverbeke, Jolien and Freund-Levi, Yvonne and Fr{\"{o}}lich, Lutz and Scheltens, Philip and Teunissen, Charlotte and Frisoni, Giovanni and Blin, Olivier and Richardson, Jill and Bordet, R{\'{e}}gis and Engelborghs, Sebastiaan and de Roeck, Ellen and Martinez-Lage, Pablo and Tainta, Mikel and Lle{\'{o}}, Alberto and Sala, Isabel and Popp, Julius and Peyratout, Gwedoline and Verhey, Frans and Tsolaki, Magda and Andreasson, Ulf and Blennow, Kaj and Zetterberg, Henrik and Streffer, Johannes and Vos, Stephanie J. B. and Lovestone, Simon and Visser, Pieter-Jelle and Bertram, Lars and Lunnon, Katie and Pishva, Ehsan},
 doi = {10.1101/2023.09.27.23296143},
 isbn = {10.1101/2023.09.2},
@@ -225,6 +240,11 @@ year = {2023}
 
 @article{Smith2023,
 abbr={DADM},
+abstract = {The aim of this study was to identify DNA methylation signatures that were associated with 15 CSF biomarker measures of Alzheimer’s disease (AD) or neurodegeneration.
+We profiled DNA methylation in 886 blood samples from the EMIF-AD study using the Illumina EPIC array, identifying differentially methylated loci, and regions consisting of multiple adjacent differentially methylated sites.
+We identified Bonferroni-significant differences in DNA methylation with respect to CSF t-tau Z-score (five loci), Aβ42 levels (one loci), YKL-40 levels (six loci) and NFL (seven loci). Significant differentially methylated regions were identified in 13 of the 15 analyses, with overlapping regions featuring in multiple CSF measures(MX2, RHOH, ANKMY1, ZFP57) analyses, which was unsurprising given the high correlation between measures. Interestingly, we identified several regions that overlapped between the tau and amyloid (ZBTB22), tau and NFL (S100A13), NFL and neurogranin (SORD), and neurogranin and amyloid (STRA6) regional analyses.
+In this blood-based epigenome-wide association study of AD-relevant CSF biomarkers we identified several interesting genomic loci and regions.
+},
 author = {Smith, Rebecca G. and Imm, Jennifer L and Dobricic, Valerija and Sommerer, Yasmine and Bos, Isabelle and Vos, Stephanie J. B. and Verhey, Frans R.J. and Scheltens, Philip and Engelborgs, Sebastiaan and Frisoni, Giovanni B and Blin, Olivier and Richardson, Jill C and Bordet, R{\'{e}}gis and Tsolaki, Magda and Popp, Julius and Martinez‐Lage, Pablo and Lleo, Alberto and Johannsen, Peter and Freund‐Levi, Yvonne and Lutz, Fr{\"{o}}lich and Vandenberghe, Rik and Wittig, Michael and Frank, Andre and Lovestone, Simon and Streffer, Johannes and Andreasson, Ulf and Blennow, Kaj and Visser, Pieter Jelle and Zetterberg, Henrik and Bertram, Lars and Lunnon, Katie},
 doi = {10.1002/ALZ.080072},
 issn = {1552-5260},
@@ -237,23 +257,18 @@ volume = {19},
 year = {2023}
 }
 
-@article{Sommerer2023,
-abbr={Alzheimer's res. ther.},
-abstract = {Background: Studies on DNA methylation (DNAm) in Alzheimer's disease (AD) have recently highlighted several genomic loci showing association with disease onset and progression. Methods: Here, we conducted an epigenome-wide association study (EWAS) using DNAm profiles in entorhinal cortex (EC) from 149 AD patients and control brains and combined these with two previously published EC datasets by meta-analysis (total n = 337). Results: We identified 12 cytosine-phosphate-guanine (CpG) sites showing epigenome-wide significant association with either case–control status or Braak's tau-staging. Four of these CpGs, located in proximity to CNFN/LIPE, TENT5A, PALD1/PRF1, and DIRAS1, represent novel findings. Integrating DNAm levels with RNA sequencing-based mRNA expression data generated in the same individuals showed significant DNAm-mRNA correlations for 6 of the 12 significant CpGs. Lastly, by calculating rates of epigenetic age acceleration using two recently proposed “epigenetic clock” estimators we found a significant association with accelerated epigenetic aging in the brains of AD patients vs. controls. Conclusion: In summary, our study represents the hitherto most comprehensive EWAS in AD using EC and highlights several novel differentially methylated loci with potential effects on gene expression.},
-author = {Sommerer, Yasmine and Dobricic, Valerija and Schilling, Marcel and Ohlei, Olena and Sabet, Sanaz Sedghpour and Wesse, Tanja and Fu{\ss}, Janina and Franzenburg, S{\"{o}}ren and Franke, Andre and Parkkinen, Laura and Lill, Christina M. and Bertram, Lars},
-doi = {10.1186/S13195-023-01232-7/TABLES/6},
-issn = {17589193},
-journal = {Alzheimer's Research and Therapy},
-keywords = {Alzheimer's disease,Brain,DNA methylation,EWAS,Entorhinal cortex,Epigenome-wide association study,Meta-analysis},
-month = {dec},
-number = {1},
-pages = {1--13},
-pmid = {37149695},
-publisher = {BioMed Central Ltd},
-title = {{Entorhinal cortex epigenome-wide association study highlights four novel loci showing differential methylation in Alzheimer's disease}},
-url = {https://link.springer.com/articles/10.1186/s13195-023-01232-7 https://link.springer.com/article/10.1186/s13195-023-01232-7},
-volume = {15},
-year = {2023},
-selected={true}
+@article{ohlei2023,
+  abbr={medRxiv},
+  abstract = {DNA methylation (DNAm) is an epigenetic mark with essential roles in disease development and predisposition. Here, we created genome-wide maps of methylation quantitative trait loci (meQTL) in three peripheral tissues and used Mendelian randomization (MR) analyses to assess the potential causal relationships between DNAm and risk for two common neurodegenerative disorders, i.e. Alzheimer’s disease (AD) and Parkinson’s disease (PD). Genome-wide single nucleotide polymorphism (SNP; ~5.5M sites) and DNAm (~850K CpG sites) data were generated from whole blood (n=1,058), buccal (n=1,527) and saliva (n=837) specimens. We identified between 11 and 15 million genome-wide significant (p<10−14) SNP-CpG associations in each tissue. Combining these meQTL GWAS results with recent AD/PD GWAS summary statistics by MR strongly suggests that the previously described associations between PSMC3, PICALM, and TSPAN14 and AD may be founded on differential DNAm in or near these genes. In addition, there is strong, albeit less unequivocal, support for causal links between DNAm at PRDM7 in AD as well as at KANSL1/MAPT in AD and PD. Our study adds valuable insights on AD/PD pathogenesis by combining two high-resolution “omics” domains, and the meQTL data shared along with this publication will allow like-minded analyses in other diseases.},
+  bibtex_show={true},
+  title={Genome-wide QTL mapping across three tissues highlights several Alzheimer’s and Parkinson’s disease loci potentially acting via DNA methylation},
+  author={Ohlei, Olena and Sommerer, Yasmine and Dobricic, Valerija and Homann, Jan and Deecke, Laura and Schilling, Marcel and Bartrés-Faz, David and Cattaneo, Gabriele and Düzel, Sandra and Fjell, Anders M. and Lindenberger, Ulman and Pascual-Leone, Álvaro and Sabet, Sanaz Sedghpour and Solé-Padullés, Cristina and Tormos, Joseph M. and Vetter, Valentin M. and Walhovd, Kristine B. and Wesse, Tanja and Wittig, Michael and Franke, Andre and Demuth, Ilja and Lill, Christina M. and Bertram, Lars},
+  journal={medRxiv},
+  month = {dec},
+  volume={},
+  number={},
+  pages={},
+  year={2023},
+  publisher={}
 }
 
